--- a/lambdaTest/template.yaml
+++ b/lambdaTest/template.yaml
@@ -11,7 +11,18 @@ Globals:
     Timeout: 30
 
 Resources:
-  HelloWorldFunction:
+  LambdaTestApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: Prod
+      Cors: "'*'"
+      Auth: # link authorizer function to the api gateway
+        DefaultAuthorizer: MyLambdaTokenAuthorizer
+        Authorizers:
+          MyLambdaTokenAuthorizer:
+            FunctionArn: arn:aws:lambda:us-east-1:750989312652:function:Authorizer-LambdaAuthorizer-3XdcKLyTz3E9
+
+  LambdaTest1:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: src/
@@ -23,3 +34,4 @@ Resources:
           Properties:
             Path: /health
             Method: get
+            RestApiId: !Ref LambdaTestApi
